{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 11,
  "lineage": "a618cad4-f49b-1fe7-49eb-9f6e80e1fb5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "group10_nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:471112673321:instance/i-0f1e45b1e7363f323",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1e45b1e7363f323",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a6ba91cafaa522c",
            "private_dns": "ip-10-0-1-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ffbf29a3d45fe73c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08a241882922ad9e2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034de3122cff148cc",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a241882922ad9e2"
            ]
          },
          "dependencies": [
            "aws_security_group.group10_ec2_sg",
            "aws_subnet.group10_public_subnet",
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group10_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:internet-gateway/igw-004df5de5ef6aecd0",
            "id": "igw-004df5de5ef6aecd0",
            "owner_id": "471112673321",
            "tags": {
              "Name": "devops-group-10"
            },
            "tags_all": {
              "Name": "devops-group-10"
            },
            "vpc_id": "vpc-0573b8fc68ab078b9"
          },
          "dependencies": [
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group10_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:route-table/rtb-0cb2779e801b49f05",
            "id": "rtb-0cb2779e801b49f05",
            "owner_id": "471112673321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004df5de5ef6aecd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-group-10"
            },
            "tags_all": {
              "Name": "devops-group-10"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573b8fc68ab078b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group10_igw",
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group10_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e5c4b1f7cfd75e",
            "route_table_id": "rtb-0cb2779e801b49f05",
            "subnet_id": "subnet-034de3122cff148cc"
          },
          "dependencies": [
            "aws_internet_gateway.group10_igw",
            "aws_route_table.group10_routetable",
            "aws_subnet.group10_public_subnet",
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group10_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:security-group/sg-08a241882922ad9e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a241882922ad9e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241008204822605800000001",
            "name_prefix": "terraform-",
            "owner_id": "471112673321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-group-10"
            },
            "tags_all": {
              "Name": "devops-group-10"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573b8fc68ab078b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group10_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:subnet/subnet-034de3122cff148cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034de3122cff148cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112673321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-group-10"
            },
            "tags_all": {
              "Name": "devops-group-10"
            },
            "vpc_id": "vpc-0573b8fc68ab078b9"
          },
          "dependencies": [
            "aws_vpc.group10_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group10_nginx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:vpc/vpc-0573b8fc68ab078b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0872d43db9d23d34f",
            "default_route_table_id": "rtb-0ac3eb73be407acd0",
            "default_security_group_id": "sg-07f21147a0a0fdaaf",
            "dhcp_options_id": "dopt-0ca335e3ce8e30a45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0573b8fc68ab078b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac3eb73be407acd0",
            "owner_id": "471112673321",
            "tags": {
              "Name": "devops-group-10"
            },
            "tags_all": {
              "Name": "devops-group-10"
            }
          }
        }
      ]
    }
  ]
}